--- a/bundles/simple.yaml
+++ b/bundles/simple.yaml
@@ -20,6 +20,142 @@ spec:
           ports:
             - name: http-web
               containerPort: 8080
+          securityContext:
+            allowPrivilegeEscalation: false---
+apiVersion: v1
+kind: Service
+metadata:
+  name: blue-cms
+  labels:
+    monokle.io/demo: vanilla-blue-cms
+spec:
+  selector:
+    app: blue-INCORRECT_REFERENCE
+  ports:
+    - name: http-web
+      protocol: TCP
+      port: 81
+      targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: blue-cms
+  labels:
+    monokle.io/demo: vanilla-blue-cms
+spec:
+  selector:
+    app: blue-INCORRECT_REFERENCE
+  ports:
+    - name: http-web
+      protocol: TCP
+      port: 81
+      targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: blue-cms
+  labels:
+    monokle.io/demo: vanilla-blue-cms
+spec:
+  selector:
+    app: blue-INCORRECT_REFERENCE
+  ports:
+    - name: http-web
+      protocol: TCP
+      port: 81
+      targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: blue-cms
+  labels:
+    monokle.io/demo: vanilla-blue-cms
+spec:
+  selector:
+    app: blue-INCORRECT_REFERENCE
+  ports:
+    - name: http-web
+      protocol: TCP
+      port: 81
+      targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: blue-cms
+  labels:
+    monokle.io/demo: vanilla-blue-cms
+spec:
+  selector:
+    app: blue-INCORRECT_REFERENCE
+  ports:
+    - name: http-web
+      protocol: TCP
+      port: 81
+      targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: blue-cms
+  labels:
+    monokle.io/demo: vanilla-blue-cms
+spec:
+  selector:
+    app: blue-INCORRECT_REFERENCE
+  ports:
+    - name: http-web
+      protocol: TCP
+      port: 81
+      targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: blue-cms
+  labels:
+    monokle.io/demo: vanilla-blue-cms
+spec:
+  selector:
+    app: blue-INCORRECT_REFERENCE
+  ports:
+    - name: http-web
+      protocol: TCP
+      port: 81
+      targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: blue-cms
+  labels:
+    monokle.io/demo: vanilla-blue-cms
+spec:
+  selector:
+    app: blue-INCORRECT_REFERENCE
+  ports:
+    - name: http-web
+      protocol: TCP
+      port: 81
+      targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: blue-cms
+  labels:
+    monokle.io/demo: vanilla-blue-cms
+spec:
+  selector:
+    app: blue-INCORRECT_REFERENCE
+  ports:
+    - name: http-web
+      protocol: TCP
+      port: 81
+      targetPort: 8080
 ---
 apiVersion: v1
 kind: Service
