auto fix and suppression

--- a/kustomize-happy-cms/base/deployment.yaml
+++ b/kustomize-happy-cms/base/deployment.yaml
@@ -20,3 +20,10 @@ spec:
           ports:
             - name: http-web
               containerPort: 8080
+          securityContext:
+            readOnlyRootFilesystem: true
+            capabilities:
+              drop:
+                - ALL
+            runAsUser: 10001
+            runAsGroup: 10001
