--- a/bundles/simple.yaml
+++ b/bundles/simple.yaml
@@ -2,10 +2,12 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: blue-cms
+  annotations:
+    monokle.io/suppress.KBP001: false positive
   labels:
     monokle.io/demo: vanilla-blue-cms
 spec:
-  replicas: "this-should-be-a-number"
+  replicas: 2
   selector:
     matchLabels:
       app: blue-cms
@@ -20,6 +22,13 @@ spec:
           ports:
             - name: http-web
               containerPort: 8080
+          securityContext:
+            readOnlyRootFilesystem: true
+            capabilities:
+              drop:
+                - ALL
+            runAsUser: 10001
+            runAsGroup: 10001
 ---
 apiVersion: v1
 kind: Service
